шапку контакта и её адаптацию

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -2,6 +2,7 @@
   --c-light: #DDD;
   --c-dark: #282828;
   --c-gray: #545454;
+  --c-accent: #FFC700;
   --c-blue: #2F80ED;
   --duration: 300ms;
   --duration-f: 150ms;
