Проработку вёрстки интерфейса контакта, создание компонента ContactInput

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -4,6 +4,7 @@
   --c-gray: #545454;
   --c-accent: #FFC700;
   --c-blue: #2F80ED;
+  --c-red: #EB5757;
   --duration: 300ms;
   --duration-f: 150ms;
   --font: 'Montserrat';
