Делаем невыбранный тип контакта серым цветом, вывод заголовка в шапку и в карточку, замена значка в шапке

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -2,6 +2,7 @@
   --c-light: #DDD;
   --c-dark: #282828;
   --c-gray: #545454;
+  --c-gray-light: #a9a9a9;
   --c-accent: #FFC700;
   --c-blue: #2F80ED;
   --c-red: #EB5757;
