--- a/src/assets/_contact.scss
+++ b/src/assets/_contact.scss
@@ -8,6 +8,13 @@
     justify-content: center;
 
     margin-bottom: 1.5rem;
+
+    &-icon {
+      width: 1rem;
+height: 1rem;
+
+margin-right: 0.5rem;
+    }
   }
 
   &__avatar {
