--- a/src/assets/_filter.scss
+++ b/src/assets/_filter.scss
@@ -42,6 +42,10 @@
     font-size: 0.875rem;
     font-weight: 700;
     line-height: 1.25rem;
+
+    &._gray {
+      color: var(--c-gray-light);
+    }
   }
 
   &__icon {
