Валидацию всех полей при сохранении контакта, сохранение контакта в store Pinia и localStorage, сброс всех полей после сохранения контакта

--- a/src/assets/_filter.scss
+++ b/src/assets/_filter.scss
@@ -128,9 +128,12 @@
 
 
   &._error & {
-    &__icon-t {
-      display: none;
+    &__current {
+      color: var(--c-red);
     }
+    // &__icon-t {
+    //   display: none;
+    // }
   }
 
   ._no-bold {
